--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
         <div class="col dotted-red">Child div 2</div>
         <div class="col dotted-red">Child div 3</div>
       </div>
+      <div class="content dotted-blue">
+        <div class="col dotted-red">Child div 1</div>
+        <div class="col dotted-red">Child div 2</div>
+        <div class="col dotted-red">Child div 3</div>
+      </div>
     </main>
     <footer class="footer dotted-blue">
       This page was composed by JR4 Students Copyright 2021 - Hello students
